k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ars-system
  labels:
    name: ars-system
    app: clinical-trial-metadata
